# programming-for-beginners

./: .gitignore  .gitmodules  .travis.yml  404.html  Gemfile  README.md  _config.yml  feed.xml  index.html  index.markdown  robots.txt  sitemap.xml
.github/workflows/: jekyll.yaml
_contents/cpp/: assignment-march-cubes.md  assignment-point-to-surface.md  assignment-rigid-icp.md  assignment-surface-recon.md  eigen-solve-linear-system.md  kdtree.md  march-cubes.md  otsu-binarize.md  overview-rigid-icp.md  overview-surface-recon.md  point-to-plane-icp.md  point-to-point-icp.md  radial-basis-function.md
_contents/python/: assignment-gan.md  assignment-logistic.md  assignment-sudoku.md  conditional-gan.md  convolutional-network.md  devenv-setup.md  figure-detection.md  gan.md  logistic-regression-01.md  logistic-regression-02.md  read-binary.md  solve-sudoku.md  stabilize-gan-training.md
_contents/setup/: cpp.md  git.md  python.md  shell.md
_cpp/: assignment-march-cubes.md  assignment-point-to-surface.md  eigen-solve-linear-system.md  kdtree.md  march-cubes.md  otsu-binarize.md  point-to-surface.md  radial-basis-function.md
_data/: archives.yml
_includes/: disqus.html  head.html  lightbox.html  mathjax.html
_layouts/: default.html  post.html
_plugins/: archive.rb
_programs/cpp/: .gitignore  CMakeLists.txt
_programs/cpp/cmake/: FindEigen3.cmake
_programs/cpp/src/: CMakeLists.txt
_programs/cpp/src/common/: array3d.h  io.h  path.h  vec3.h  volume.h
_programs/cpp/src/icp/: CMakeLists.txt  icp.cpp  icp.h  main.cpp  svd.cpp  svd.h
_programs/cpp/src/mcubes/: CMakeLists.txt  main.cpp  mcubes.cpp  mcubes.h  mcubes_utils.cpp  mcubes_utils.h
_programs/cpp/src/surfrecon/: CMakeLists.txt  fmm.h  main.cpp  surface_recon.cpp  surface_recon.h
_programs/python/: .gitignore  download.py  environment.yaml  logistic_regression_01.ipynb  logistic_regression_02.ipynb  read_binary.ipynb
_programs/python/gan/: DCGAN_flower.ipynb  DCGAN_mnist_class.ipynb  convolution-network.ipynb  download.py
_programs/python/logistic/: logistic_regression_02.ipynb  read_binary.ipynb
_programs/python/logistic/.ipynb_checkpoints/: logistic_regression_01-checkpoint.ipynb
_programs/python/sudoku/: image_load.ipynb  solve_sudoku.ipynb  sudoku_photo_solver.ipynb  sudoku_photo_solver.py
_python/: assignment-gan.md  conditional-gan.md  figure-detection.md  image-load.md  logistic-regression-01.md
cpp/: .gitignore  CMakeLists.txt
cpp/assignment-march-cubes/: index.html
cpp/assignment-rigid-icp/: index.html
cpp/assignment-surface-recon/: index.html
cpp/eigen-solve-linear-system/: index.html
cpp/kdtree/: index.html
cpp/march-cubes/: index.html
cpp/otsu-binarize/: index.html
cpp/overview-rigid-icp/: index.html
cpp/overview-surface-recon/: index.html
cpp/point-to-plane-icp/: index.html
cpp/point-to-point-icp/: index.html
cpp/radial-basis-function/: index.html
cpp/read-volume/: index.html
cpp/src/: CMakeLists.txt
cpp/src/common/: debug.h  kdtree.h  march_cubes.h  mesh_read_write.h  path.h  progress.h  timer.h  trimesh.h  vec3.h  vector3d.h  volume.h
cpp/src/march_cubes/: CMakeLists.txt
cpp/src/mcubes/: CMakeLists.txt  main.cpp  mcubes.cpp  mcubes.h
cpp/src/surface_recon/: main.cpp
cpp/src/surfrecon/: CMakeLists.txt  fmm.cpp  fmm.h  main.cpp  mcubes.cpp  surface_recon.cpp  surface_recon.h
jekyll/: Gemfile  _config.yml  index.markdown
jekyll/_cpp/: assignment-march-cubes.md  march-cubes.md  march_cubes.md  otsu-binarize.md  read-volume.md  read_volume.md
jekyll/_includes/: head.html  sidebar.html
jekyll/_layouts/: default.html
jekyll/_posts/: 2020-04-24-linear-regression.md  2020-04-24-read-binary.md
jekyll/_programs/cpp/src/common/: progress.h  trimesh.h
jekyll/_programs/cpp/src/mcubes/: mcubes.cpp
jekyll/_programs/python/: read_binary.ipynb  solve_sudoku.ipynb
jekyll/_python/: assignment-gan.md  assignment-sudoku.md  convolutional-network.md  devenv-setup.md  figure-detection.md  gan.md  logistic-regression-02.md  logistic-regression-pytorch.md  solve-sudoku.md  stabilize-gan-training.md  vae.md
jekyll/pages/: cpp.md  get_started.md  python.md
jekyll/public/css/: main.scss
pages/: cpp.md  python.md
public/css/: main.css  main.css.map  main.scss
python/: .gitignore  convolution-network.ipynb  detect_figure.ipynb  image_load.ipynb  linear_regression.ipynb  logistic_regression_02.ipynb  solve_sudoku.ipynb  sudoku_photo_solver.ipynb  sudoku_photo_solver.py  support_vector_machine.ipynb
python/assignment-gan/: index.html
python/assignment-logistic/: index.html
python/assignment-sudoku/: index.html
python/conditional-gan/: index.html
python/convolutional-network/: index.html
python/figure-detection/: index.html
python/gan/: index.html
python/image-load/: index.html
python/logistic-regression-01/: index.html
python/logistic-regression-02/: index.html
python/read-binary/: index.html
python/solve-sudoku/: index.html
python/stabilize-gan-training/: index.html
setup/cpp/: index.html
setup/git/: index.html
setup/python/: index.html
setup/shell/: index.html
